bridge/bridge-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-api
  namespace: bohr-prod
  labels:
    app.kubernetes.io/name: bridge-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bridge-api
  template:
    metadata:
      labels:
        app: bridge-api
    spec:
      containers:
        - name: bridge-api
          image: 630968570112.dkr.ecr.ap-northeast-1.amazonaws.com/bohr-prod/bridge-relayernode:test-7ff085-20260304151626
          command: ["/bin/sh", "-c", "tail -f /dev/null"]
          stdin: true
          tty: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "2000m"
              memory: "2000Mi"
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
