bridge/bridge-dfr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-dfr
  namespace: bohr-prod
  labels:
    app.kubernetes.io/name: bridge-dfr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bridge-dfr
  template:
    metadata:
      labels:
        app: bridge-dfr
    spec:
      containers:
        - name: bridge-dfr
          image: 630968570112.dkr.ecr.ap-northeast-1.amazonaws.com/bohr-prod/bridge-dfr:test-840e96-20260313185757
          stdin: true
          tty: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
              ephemeral-storage: "5Gi"
            limits:
              cpu: "1000m"
              memory: "1000Mi"
              ephemeral-storage: "8Gi"
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 200
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 200
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 5
