bridge/bridge-relayernode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-relayernode
  namespace: bohr-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bridge-relayernode
  template:
    metadata:
      labels:
        app: bridge-relayernode
    spec:
      containers:
        - name: bridge-relayernode
          image: 630968570112.dkr.ecr.ap-northeast-1.amazonaws.com/bohr-prod/bridge-relayernode:test-6d009b-20260302103016
          command: [ "/bin/sh", "-c", "tail -f /dev/null" ]
          stdin: true
          tty: true
          resources:
            requests:
              cpu: "10m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
