bridge/bridge-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge-api
  namespace: bohr-test
spec:
  type: ClusterIP
  selector:
    app: bridge-api
  ports:
    - name: http-api
      port: 8080
