bridge/bridge-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bridge-api
  namespace: bohr-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # 启用并配置CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # 允许携带凭证（如果前端请求有cookie/token等）
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # 允许的HTTP方法
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    # 允许的请求头
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"

spec:
  ingressClassName: nginx-public
  rules:
    - host: api-bridge.bohr.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bridge-api
                port:
                  number: 8080
